# cacophony

./:  build_linux.sh  .gitignore  Cargo.toml  README.md  TODO.md  cc.ps1  changelog.md  program.py  setup.py
audio/: Cargo.toml
audio/src/: command.rs  conn.rs  decayer.rs  event_queue.rs  event_type.rs  export.rs  export_state.rs  exporter.rs  lib.rs  midi_event_queue.rs  play_state.rs  player.rs  program.rs  soundfont_banks.rs  synth_state.rs  synthesizer.rs  time_state.rs  timed_event.rs  timed_midi_event.rs  types.rs  wav.rs
audio/src/export/: export_setting.rs  export_state.rs  export_type.rs  exportable.rs  metadata.rs
audio/src/exporter/: export_setting.rs  export_type.rs  metadata.rs  midi_note.rs  multi_file.rs  multi_file_suffix.rs
audio/tests/: CT1MBGMRSV1.06.sf2
cacophony/: Cargo.toml  callbacker.py  clatter.py  config.py  help_util.py  midi_util.py  open_file_state.py  options.py  path_util.py  paths.py  piano_roll_state.py  sound_font.py  soundfont.py  state.py  text_to_speech.py  util.py  version.py  waveform_generator.py  waveform_generator_type.py
cacophony/callbacker/: callbacker.py  dictionary.py  enum_list.py  file_path.py  float_list.py  indexed_list.py  int_list.py  value.py
cacophony/data/: config.ini
cacophony/music/: beat.py  globals.py  music.py  note.py  track.py
cacophony/opts/: float_range.py  globals.py  int_range.py  notes_range.py  options.py  zero_1.py  zero_127.py
cacophony/render/: abc_rectangle.py  blit.py  border.py  color.py  draw_rectangle.py  fill.py  globals.py  input_key.py  options_panel.py  rectangle.py  render_at.py  render_command.py  render_result.py  renderer.py  text.py  waveform_args_panel.py  waveform_generator_args.py
cacophony/render/commands/: abc_rectangle.py  arrow.py  blit.py  border.py  command.py  fill.py  line.py  piano_roll_note.py  rectangle.py  render_at.py  text.py
cacophony/render/macros/: panel.py  parent_rect.py  tracks_list.py
cacophony/render/panel/: chiptune_panel.py  choose_synthesizer.py  main_menu.py  new_track.py  open_file.py  panel.py  panel_type.py  piano_roll.py  scroll_panel.py  synthesizer_panel.py  tracks_list.py
cacophony/render/ui_element/: boolean.py  i127.py  label.py  options.py  ui_element.py
cacophony/render/ui_fields/: callbacker.py  options.py  string.py  ui_field.py
cacophony/render/widget/: action.py  boolean.py  divider.py  file_prompt.py  label.py  options.py  widget.py
cacophony/src/: main.rs
cacophony/synthesizer/: chiptune.py  chiptune_pcm.py  clatter.py  soundfont.py  synthesizer.py  util.py  vst.py  vsti.py
cacophony/waveform_generators/: callbacker.py  clatter.py  globals.py  note.py  note_generator.py  soundfont.py  waveform_generator.py  waveform_generator_type.py
cacophony_audio/src/: Cargo.toml  command.rs  conn.rs  export_state.rs  lib.rs  message.rs  player.rs  program.rs  synth_state.rs  synthesizer.rs  time.rs  time_state.rs
cacophony_core/: Cargo.toml
cacophony_core/data/: config.ini  text.csv
cacophony_core/src/: config.rs  fraction_utils.rs  input_event.rs  input_state.rs  lib.rs  music.rs  note.rs  panel_type.rs  paths.rs  serialize.rs  state.rs  time.rs  viewport.rs
cacophony_input/: Cargo.toml
cacophony_input/src/: input.rs  input_event.rs  keys.rs  lib.rs  midi_binding.rs  midi_conn.rs  midi_delta_event.rs  mods.rs  note_on.rs  qwerty_binding.rs
cacophony_io/: Cargo.toml
cacophony_io/src/: lib.rs  tooltip.rs
common/: Cargo.toml
common/data/: config.ini  keycodes.txt  text.csv
common/src/: args.rs  config.rs  edit_mode.rs  effect.rs  event.rs  export_settings.rs  font.rs  fraction.rs  fraction_utils.rs  index.rs  indexed_values.rs  input_state.rs  lib.rs  midi_track.rs  music.rs  music_panel_field.rs  note.rs  open_file.rs  open_file_panel_type.rs  panel_type.rs  paths.rs  paths_state.rs  piano_roll_mode.rs  select_mode.rs  selectable.rs  selection.rs  sizes.rs  state.rs  text.rs  time.rs  u64_or_f32.rs  view.rs  viewport.rs
common/src/effect/: effect_type.rs  valueless_effect_type.rs
common/src/export_settings/: export_type.rs  metadata.rs  mid.rs  mp3.rs  multi_file.rs  ogg.rs  wav.rs
common/src/open_file/: child_paths.rs  export_type.rs  extension.rs  file_and_directory.rs  file_or_directory.rs  open_file.rs  open_file_type.rs
input/: Cargo.toml
input/src/: debug_input_event.rs  input.rs  input_event.rs  keys.rs  lib.rs  midi_binding.rs  midi_conn.rs  mods.rs  qwerty_binding.rs
io/: Cargo.toml
io/src/: abc123.rs  effects_panel.rs  export_panel.rs  export_settings_panel.rs  import_midi.rs  io_command.rs  lib.rs  links_panel.rs  mid.rs  music_panel.rs  open_file.rs  open_file_panel.rs  panel.rs  piano_roll.rs  piano_roll_panel.rs  popup.rs  quit_panel.rs  save.rs  snapshot.rs  tooltip.rs  tracks_panel.rs  undo_state.rs
io/src/export_settings_panel/: export_setting.rs  mid.rs
io/src/open_file/: file_or_directory.rs  open_file_panel.rs  open_file_type.rs
io/src/piano_roll/: edit.rs  edit_mode_deltas.rs  piano_roll_panel.rs  piano_roll_sub_panel.rs  select.rs  time.rs  view.rs
io/src/piano_roll_panel/: edit.rs  edit_mode_deltas.rs  piano_roll_panel.rs  select.rs  time.rs  view.rs
render/: Cargo.toml
render/src/: boolean_text.rs  color_key.rs  drawable.rs  effects_panel.rs  export_panel.rs  export_settings_panel.rs  field.rs  field_params.rs  focusable_texture.rs  lib.rs  links_panel.rs  main_menu.rs  music_panel.rs  open_file_panel.rs  page.rs  page_position.rs  panel.rs  panels.rs  piano_roll_panel.rs  popup.rs  quit_panel.rs  renderer.rs  scroll_page.rs  sizes.rs  tracks_panel.rs  types.rs
render/src/effects_panel/: effect_field.rs  effect_field_state.rs  effect_field_values.rs
render/src/field_params/: boolean.rs  boolean_corners.rs  key_input.rs  key_list.rs  key_list_corners.rs  key_value.rs  key_width.rs  label.rs  label_rectangle.rs  label_ref.rs  line.rs  list.rs  panel_background.rs  rectangle.rs  rectangle_pixel.rs  text_width.rs  util.rs  width.rs
text/: Cargo.toml
text/src/: lib.rs  text.rs  token.rs  tooltip.rs  tooltips.rs  tts.rs  tts_string.rs  value_map.rs
(+87 files in other folders)
