[workspace]
members = ["audio", "common", "input", "io", "render", "text"]

[workspace.package]
version = "0.1.0"
authors = ["Esther Alter <subalterngames@gmail.com>"]
description = "A minimalist and ergonomic MIDI sequencer"
documentation = "https://github.com/subalterngames/cacophony"
edition = "2021"

[workspace.dependencies]
serde_json = "1.0"
rust-ini = "0.18"
directories = "5.0.0"
time = "0.3.21"
midir = "0.9.1"
crossbeam-channel = "0.5.8"
csv = "1.2.1"
cpal = "0.13.1"
hound = "3.5.0"
id3 = "1.7.0"
mp3lame-encoder = "0.1.2"
chrono = "0.4.26"
ghakuf = "0.5.6"
vorbis-encoder = "0.1.4"
oggvorbismeta = "0.1.0"
strum = "0.24"
strum_macros = "0.24"
edit = "0.1.4"
regex = "1.9.1"
imageproc = "0.23.0"
image = "0.24.6"
rusttype = "0.9.3"
parking_lot = "0.12.1"

[workspace.dependencies.hashbrown]
version = "0.13.2"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0.153"
default-features = false
features = ["derive"]

[workspace.dependencies.macroquad]
version = "0.4.1"
default-features = false
features = []

[workspace.dependencies.oxisynth]
version = "0.0.3"
features = ["sf3"]
git = "https://github.com/PolyMeilex/OxiSynth.git"
branch = "master"

[workspace.dependencies.tts]
version = "0.25.5"
default-features = false
features = ["speech_dispatcher_0_9"]

[package]
name = "cacophony"
version = "0.1.0"
authors = ["Esther Alter <subalterngames@gmail.com>"]
description = "A minimalist and ergonomic MIDI sequencer"
documentation = "https://github.com/subalterngames/cacophony"
edition = "2021"

[dependencies]
macroquad = { workspace = true }
parking_lot = { workspace = true }

[dependencies.audio]
path = "audio"

[dependencies.common]
path = "common"

[dependencies.input]
path = "input"

[dependencies.io]
path = "io"

[dependencies.render]
path = "render"

[dependencies.text]
path = "text"

[package.metadata.bundle]
name = "Cacophony"
identifier = "com.subalterngames.cacophony"
icon = ["icon/32.png", "icon/64.png", "icon/128.png", "icon/256.png"]
version = "0.1.0"
resources = ["data/*"]
copyright = "Copyright (c) Subaltern Games LLC 2023. All rights reserved."
short_description = "A minimalist and ergonomic MIDI sequencer."
long_description = """
Cacophony is a minimalist and ergonomic MIDI sequencer. It's minimalist in that it doesn't have a lot of functionality MIDI sequencers have. It's ergonomic in that there is no mouse input and a very clean interface, allowing you to juggle less inputs and avoid awkward mouse motions.

Cacophony is a proof-of-concept of an unusual way to create digital music.

I made Cacophony because I want to make music in a very particular way that I couldn't find anywhere.

Cacophony's mascot is Casey the Transgender Cacodemon. No official artwork of Casey exists because I don't want to be cursed.
"""
deb_depends = []
osx_frameworks = []