[workspace]
members = ["audio", "common", "input", "io", "render", "text"]

[workspace.package]
version = "0.2.4"
authors = ["Esther Alter <subalterngames@gmail.com>"]
description = "A minimalist and ergonomic MIDI sequencer"
documentation = "https://github.com/subalterngames/cacophony"
edition = "2021"

[workspace.dependencies]
serde_json = "1.0"
rust-ini = "0.18"
directories = "5.0.1"
midir = "0.9.1"
csv = "1.2.1"
cpal = "0.13.1"
hound = "3.5.0"
chrono = "0.4.31"
vorbis-encoder = "0.1.4"
oggvorbismeta = "0.1.0"
strum = "0.24"
strum_macros = "0.24"
edit = "0.1.4"
regex = "1.9.1"
parking_lot = "0.12.1"
num-traits = "0.2.16"
webbrowser = "0.8.10"
lazy_static = "1.4.0"
midly = "0.5.3"
flacenc = "0.3.0"
metaflac = "0.2.5"
mp3lame-encoder = "0.1.4"

[workspace.dependencies.clap]
version = "4.4.7"
default-features = false
features = ["derive", "string", "env", "error-context", "help", "std", "suggestions", "usage"]

[workspace.dependencies.colorgrad]
version = "0.6.2"
default-features = false
features = []

[workspace.dependencies.id3]
version = "1.7.0"
default-features = false
features = []

[workspace.dependencies.ureq]
version = "2.9.7"
default-features = false
features = ["tls"]

[workspace.dependencies.hashbrown]
version = "0.13.2"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0.153"
default-features = false
features = ["derive"]

[workspace.dependencies.macroquad]
version = "0.4.4"
default-features = false
features = []
git = "https://github.com/not-fl3/macroquad.git"
rev = "6d9685d"

[workspace.dependencies.oxisynth]
version = "0.0.3"
features = []
git = "https://github.com/subalterngames/OxiSynth.git"
branch = "midi_event_copy_clone"

[workspace.dependencies.tts]
version = "0.25.6"
default-features = false
git = "https://github.com/subalterngames/tts-rs.git"
branch = "speech_dispatcher_voices_panic"

[features]
speech_dispatcher_0_11 = ["text/speech_dispatcher_0_11"]
speech_dispatcher_0_9 = ["text/speech_dispatcher_0_9"]

[package]
name = "cacophony"
version = "0.2.4"
authors = ["Esther Alter <subalterngames@gmail.com>"]
description = "A minimalist and ergonomic MIDI sequencer"
documentation = "https://github.com/subalterngames/cacophony"
edition = "2021"

[dependencies]
macroquad = { workspace = true }
parking_lot = { workspace = true }
ureq = { workspace = true }
regex = { workspace = true }
rust-ini = { workspace = true }
clap = { workspace = true }

[dependencies.audio]
path = "audio"

[dependencies.common]
path = "common"

[dependencies.input]
path = "input"

[dependencies.io]
path = "io"

[dependencies.render]
path = "render"

[dependencies.text]
path = "text"

[package.metadata.bundle]
name = "Cacophony"
identifier = "com.subalterngames.cacophony"
icon = ["icon/32.png", "icon/64.png", "icon/128.png", "icon/256.png"]
version = "0.2.4"
resources = ["data/*"]
copyright = "Copyright (c) Subaltern Games LLC 2023. All rights reserved."
short_description = "A minimalist and ergonomic MIDI sequencer."
long_description = """
Cacophony is a minimalist and ergonomic MIDI sequencer. It's minimalist in that it doesn't have a lot of functionality MIDI sequencers have. It's ergonomic in that there is no mouse input and a very clean interface, allowing you to juggle less inputs and avoid awkward mouse motions.

I made Cacophony because I want to make music in a very particular way that I couldn't find anywhere.

Cacophony's mascot is Casey the Transgender Cacodemon. No official artwork of Casey exists because I don't want to be cursed.
"""
deb_depends = []
osx_frameworks = []
