[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.13.1"
crossbeam-channel = "0.5.8"
hound = "3.5.0"
id3 = "1.7.0"
mp3lame-encoder = "0.1.2"
chrono = "0.4.26"
ghakuf = "0.5.6"
vorbis-encoder = "0.1.4"
oggvorbismeta = "0.1.0"

[dependencies.oxisynth]
version = "0.0.3"
features = ["sf3"]
git = "https://github.com/PolyMeilex/OxiSynth.git"
branch = "master"

[dependencies.serde]
version = "1.0.153"
default-features = false
features = ["derive"]

[dependencies.common]
path = "../common"
