[package]
name = "audio"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
cpal = { workspace = true }
crossbeam-channel = { workspace = true }
hound = { workspace = true }
id3 = { workspace = true }
mp3lame-encoder = { workspace = true }
chrono = { workspace = true }
ghakuf = { workspace = true }
vorbis-encoder = { workspace = true }
oggvorbismeta = { workspace = true }
oxisynth = { workspace = true }
serde = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }

[dependencies.common]
path = "../common"
