[package]
name = "cacophony"
version = "0.1.0"
edition = "2021"

[dependencies.audio]
path = "../audio"

[dependencies.common]
path = "../common"

[dependencies.input]
path = "../input"

[dependencies.io]
path = "../io"

[dependencies.render]
path = "../render"

[dependencies.text]
path = "../text"
