[package]
name = "cacophony"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
macroquad = { workspace = true }

[dependencies.audio]
path = "../audio"

[dependencies.common]
path = "../common"

[dependencies.input]
path = "../input"

[dependencies.io]
path = "../io"

[dependencies.render]
path = "../render"

[dependencies.text]
path = "../text"
