[package]
name = "cacophony_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
fraction = "0.13.1"

[dependencies.serde]
version = "1.0.153"
features = ["derive"]