[package]
name = "cacophony_io"
version = "0.1.0"
edition = "2021"

[dependencies.cacophony_audio]
path = "../cacophony_audio"

[dependencies.cacophony_core]
path = "../cacophony_core"

[dependencies.cacophony_input]
path = "../cacophony_input"

[dependencies.cacophony_text]
path = "../cacophony_text"

[dependencies.macroquad]
version = "0.3"
default-features = false
features = []
git = "https://github.com/not-fl3/macroquad.git"
rev = "5b5bb10"