[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
rust-ini = "0.18"
directories = "5.0.0"
time = "0.3.21"
midir = "0.9.1"
crossbeam-channel = "0.5.8"
csv = "1.2.1"

[dependencies.hashbrown]
version = "0.13.2"
features = ["serde"]

[dependencies.serde]
version = "1.0.153"
default-features = false
features = ["derive"]

[dependencies.macroquad]
version = "0.3"
default-features = false
features = []
git = "https://github.com/not-fl3/macroquad.git"
rev = "5b5bb10"