[package]
name = "common"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rust-ini = { workspace = true }
directories = { workspace = true }
time = { workspace = true }
macroquad = { workspace = true }