[package]
name = "input"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
hashbrown = { workspace = true }
macroquad = { workspace = true }
rust-ini = { workspace = true }
midir = { workspace = true }
parking_lot = { workspace = true }

[dependencies.common]
path = "../common"