[package]
name = "io"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
edit = { workspace = true }
hashbrown = { workspace = true }
rust-ini = { workspace = true }

[dependencies.audio]
path = "../audio"

[dependencies.common]
path = "../common"

[dependencies.input]
path = "../input"

[dependencies.text]
path = "../text"