[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.24"
strum_macros = "0.24"

[dependencies.audio]
path = "../audio"

[dependencies.common]
path = "../common"

[dependencies.input]
path = "../input"

[dependencies.open_file]
path = "../open_file"

[dependencies.text]
path = "../text"

[dependencies.tooltip]
path = "../tooltip"