[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.24"
strum_macros = "0.24"
imageproc = "0.23.0"
image = "0.24.6"
rusttype = "0.9.3"

[dependencies.audio]
path = "../audio"

[dependencies.common]
path = "../common"

[dependencies.input]
path = "../input"

[dependencies.text]
path = "../text"

[dependencies.serde]
version = "1.0.153"
default-features = false
features = ["derive"]