[package]
name = "render"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rust-ini = { workspace = true }
macroquad = { workspace = true }
hashbrown = { workspace = true }
colorgrad = { workspace = true }

[dependencies.audio]
path = "../audio"

[dependencies.common]
path = "../common"

[dependencies.input]
path = "../input"

[dependencies.text]
path = "../text"