[package]
name = "text"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
rust-ini = { workspace = true }
macroquad = { workspace = true }
csv = { workspace = true }
hashbrown = { workspace = true }
regex = { workspace = true }
tts = { workspace = true }
parking_lot = { workspace = true }

[dependencies.common]
path = "../common"

[dependencies.input]
path = "../input"

[features]
speech_dispatcher_0_11 = ["tts/speech_dispatcher_0_11"]
speech_dispatcher_0_9 = ["tts/speech_dispatcher_0_9"]